--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.1.2
+  auto_route: ^8.1.1
+  go_router: ^14.2.1
 
 dev_dependencies:
   flutter_test:
