--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   provider: ^6.1.2
   auto_route: ^8.1.1
   go_router: ^14.2.1
+  font_awesome_flutter: ^10.7.0
+  flutter_svg: ^2.0.10+1
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +69,7 @@ flutter:
     - assets/images/collab/
     - assets/images/golden images/
     - assets/images/images/
-    - assets/images/logo/
+    - assets/images/logo/    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -84,11 +87,9 @@ flutter:
       fonts:
         - asset: assets/fonts/OpenSans-Regular.ttf
 
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+    - family: MyFlutterApp
+      fonts:
+        - asset: assets/fonts/MyFlutterApp.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
