--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   flutter_svg: ^2.0.10+1
   carousel_slider: ^4.2.1
-
+  url_launcher: ^6.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
