mobile home view done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   carousel_slider: ^4.2.1
   url_launcher: ^6.3.0
   flutter_map_cancellable_tile_provider: ^2.0.0
+  device_preview: ^1.1.0
 dev_dependencies:
   flutter_test:
 
